and keep track of all category-tags.
It DOES NOT substitute the  CVS log-message one should put at every
committal in the CVS repository !

   Please keep a summary of these message in geometry/History!

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------

 November 13, 2013  G.Cosmo              geom-bool-V09-06-05, 04
 - Removed G4MultiUnion and related wrapper, as not yet ready for release.
   Returning to tag "geom-bool-V09-06-02".

 November 07, 2013  G.Cosmo              geom-bool-V09-06-03
 - Moved G4UMultiUnion wrapper from usolids module. Added G4MultiUnion typedef.

 November 06, 2013  G.Cosmo              geom-bool-V09-06-02
  - Added wrapper for UMultiUnion from USolids module.

 December 14, 2012  G.Cosmo              geom-bool-V09-06-01
  - Restored return distance in G4SubtractionSolid.
  - Restored SVN id headers.

 December 02, 2012  J.Allison            geom-bool-V09-06-00
  - Removed NURBS.

 November, 30, 2012  J.Apostolakis
  - G4SubtractionSolid: improved SurfaceNormal() method, by caching the
    result of the calls to fPtrSolidA->Inside() and fPtrSolidB->Inside().
    Corrected debug printout to say 'Point p is *out*side' not inside.
    NOTE: further improvement can be made by creating new method 
            Inside( point, &resultInsideA, &resultInsideB ); 
          which can be called by a 'bare' Inside( point ) method.

 June 12, 2012  G.Cosmo                   geom-bool-V09-05-02
  - Explicitly use inclusion of headers for system of units and physical
    constants, in plan to remove implicit inclusion from globals.hh.

 May 9, 2012  G.Cosmo                     geom-bool-V09-05-01
  - G4SubtractionSolid: refined protection for potential cases of
    infinite loop in DistanceToIn(p,v); return computed distance instead
    of zero and provide more descriptive information when issuing warning.
