@@ -132,6 +132,7 @@ class G4BooleanSolid : public G4VSolid
     G4double fCubicVolume;
     G4double fSurfaceArea;
 
+    mutable G4bool fRebuildPolyhedron;
     mutable G4Polyhedron* fpPolyhedron;
 
     G4bool  createdDisplacedSolid;
